fix for chart overflow

--- a/x-pack/plugins/ml/public/jobs/new_job/simple/components/general_job_details/_general_job_details.scss
+++ b/x-pack/plugins/ml/public/jobs/new_job/simple/components/general_job_details/_general_job_details.scss
@@ -32,6 +32,10 @@
     overflow: hidden;
   }
 
+  .chart-list-panel-population {
+    padding: 10px 0px;
+  }
+
   .card {
     background-color: $euiColorEmptyShade;
     border-radius: 3px;
